sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:5: error: not found: value getValeurNombre
    for (c <- i to getValeurNombre()){
                   ^